--- a/index.html
+++ b/index.html
@@ -574,8 +574,7 @@
     <section id="map" class="map-area">
         <div class="mapouter">
             <div class="gmap_canvas">
-                <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.232991270103!2d124.63918391485392!3d8.476711193905142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32fff329d9acb9c3%3A0x7c9b6bb7245bbe91!2sCagayan%20De%20Oro%20City%20Hall!5e0!3m2!1sen!2sph!4v1651027397738!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
         </div>
         <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(assets/images/map/map-bg.jpg)"></div>
     </section>
