--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="copyright text-center">
-                            <p>Template by <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                            <p>Template by <a href="#" rel="nofollow">Sample</a></p>
                         </div> <!-- copyright -->
                     </div>
                 </div> <!-- row -->
