--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
                                             <i class="lni-map"></i>
                                         </div>
                                         <div class="info-content">
-                                            <p>1234 Avenue New York, US</p>
+                                            <p>1234 Bugo Cagayan de Oro, Philippines</p>
                                         </div>
                                     </div> <!-- single info -->
                                 </li>
